--- a/css/grid.css
+++ b/css/grid.css
@@ -59,7 +59,7 @@ p {
   grid-column: 2 / 3;
 } */
 
-@media (min-width: 768px) {
+@media (min-width: 960px) {
   .grid-blog > * {
     grid-column: 2 / 3;
   }
